Update html, css js

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
         <button type="submit" class="sbm-btn">submit</button>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
