--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Rating State -->
         <div class="rating-state">
             <div class="icon-star">
-                <img src="assets/icon-star.svg" alt="Star Icon">
+                <img src="asserts/icon-star.svg" alt="Star Icon">
             </div>
             <h1>How did we do?</h1>
             <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
