--- a/index.html
+++ b/index.html
@@ -14,21 +14,19 @@
 <body>
     <div class="container">
         <!-- Rating State -->
-        <div class="rating-state">
-            <div class="icon-star">
-                <img src="asserts/icon-star.svg" alt="Star Icon">
-            </div>
-            <h1>How did we do?</h1>
-            <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-            <div class="btn-container">
-                <button class="star-btn" data-value="1">1</button>
-                <button class="star-btn" data-value="2">2</button>
-                <button class="star-btn" data-value="3">3</button>
-                <button class="star-btn" data-value="4">4</button>
-                <button class="star-btn" data-value="5">5</button>
-            </div>
-            <button type="submit" class="sbm-btn">Submit</button>
+        <div class="icon-star">
+            <img src="assets/icon-star.svg" alt="Star">
         </div>
+        <h1>How did we do?</h1>
+        <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
+        <div class="btn-container">
+            <button class="star-btn" data-value="1">1</button>
+            <button class="star-btn" data-value="2">2</button>
+            <button class="star-btn" data-value="3">3</button>
+            <button class="star-btn" data-value="4">4</button>
+            <button class="star-btn" data-value="5">5</button>
+        </div>
+        <button type="submit" class="sbm-btn">Submit</button>
     </div>
     <script src="script.js"></script>
 </body>
