--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <!-- Rating State -->
         <div class="icon-star">
-            <img src="assets/icon-star.svg" alt="Star">
+            <img src="asserts/icon-star.svg" alt="Star">
         </div>
         <h1>How did we do?</h1>
         <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
